# Do-My-Work

./: .gitignore  README.md  pyproject.toml
config/: garrigue.yaml  hello.yaml  testgarrigue.yaml  workspace.yaml
docs/: collaboration.md  foundations.md  fragment-task-dataflow.md  ideas-todo.md  local-workflow-config.md  markdown-fragment-slice.md  ollama-mock-tooling.md  project-direction.md  reference-index-slice.md  translation-llm-slice.md  workflow-kernel.md
scripts/: start-ollama-mock.bat  start-ollama-mock.sh  start-ollama-trace.bat  start-ollama-trace.sh
src/do_my_work/: __init__.py  cli.py
src/do_my_work/application/: __init__.py  batch_runner.py  task_handlers.py  task_keys.py  task_revalidation.py  workflow_engine.py
src/do_my_work/domain/: models.py
src/do_my_work/infrastructure/: __init__.py  config_loader.py  json_workflow_store.py  markdown_fragment_report.py  markdown_reference_report.py  ollama_client.py
src/do_my_work/shared/: __init__.py
tests/: test_batch_runner.py  test_cli.py  test_config_loader.py  test_json_workflow_store.py  test_markdown_fragment_report.py  test_markdown_reference_report.py  test_ollama_client.py  test_ollama_mock_behavior.py  test_task_handlers.py  test_task_revalidation.py  test_workflow_engine.py  test_workflow_logging.py  test_workflow_models.py
tests/support/: __init__.py  ollama_mock_behavior.py  ollama_mock_server.py
