[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "do-my-work"
version = "0.1.0"
description = "A small batch workflow application scaffold for Markdown-driven jobs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown-it-py>=3.0,<4",
    "pydantic>=2.11,<3",
    "python-frontmatter>=1.1,<2",
    "PyYAML>=6.0,<7",
    "typer>=0.16,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<9",
    "ruff>=0.11,<1",
]
mock-ollama = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.35,<1",
]

[project.scripts]
do-my-work = "do_my_work.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.isort]
known-first-party = ["do_my_work"]